/*
 * $Id: ChangeLog,v 1.6621 2009/10/16 05:44:25 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2009-10-17 20:30 UTC+0100 Patrick Mast <patrick.mast@xHarbour.com>
  * source\tip\encoding\base64.c
  * source\tip\encoding\uuencode.c
    ! Fixed for compiling with xCC

2009-10-16 01:13 UTC-0430 Ron Pinkas <ron.pinkas/at/xharbour.com>
  * include\hbapiitm.h
  * source\vm\itemapi.c
    - Defed out buggy hb_itemPutCPtr2() and hb_itemPutCLPtr() - Missing support for pulHoldres
    + Added:
             #define hb_itemPutCLPtr( pItem, szText, ulLen ) hb_itemPutCPtr( pItem, szText, ulLen )
             #define hb_itemPutCPtr2( pItem, szText ) hb_itemPutC( pItem, szText )

  /* This fixes critical GPF traps in DBFNTX, DBFNSX, and ADS */

2009-10-15 08:40 UTC-0300 Luiz Rafael Culik <luiz at xharbour.com.br>
  * contrib/libnf/chdir.c
    contrib/libnf/rmdir.c
    ! added missing typecast
  * contrib/libnf/mkdir.c
    ! added missing inclue hbapifs.h
      added missing typecast
  * source/rdd/dbf1.c
    source/rdd/dbfntx/dbfntx1.c
    source/rdd/dbfcdx/dbfcdx1.c
    ! added missing typecast to hb_filedelete

2009-10-13 16:05 UTC-0430 Ron Pinkas <ron.pinkas/at/xharbour.com>
  * source/rtl/win32ole.prg
    ! Fixed GPF trap related to double release of VT_DISPATCH stored at OleValue

2009-10-13 19:00 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * source\rtl\tprinter.c
    * alter hb_PrintFileRaw() to open printed file in FILE_SHARE_READ mode

2009-10-11 13:55 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * include/classes.h
  * source/vm/classes.c
  * source/vm/hvm.c
    + "$$"/"contains" operator overload added.
      value $ object -> object:__opcontains( value )

2009-10-10 21:22 UTC-0430 Ron Pinkas <ron.pinkas/at/xharbour.com>
  * include/hbexpra.c